fix : changed color contrasts

--- a/src/styles/EventCreate.css
+++ b/src/styles/EventCreate.css
@@ -5,7 +5,7 @@
   width: auto;
   font-weight: 600;
   border-radius: 5px;
-  background-color: #2e8e83;
+  background-color: #297f75;
   color: white;
 }
 
@@ -23,7 +23,7 @@ label {
 
 .eventCreateWelcome {
   font-weight: bold;
-  color: #2e8e83;
+  color: #297f75;
   /* font-size: 2.5rem; */
   /* top: -10px; */
   font-family: "Mulish", sans-serif;
