--- a/src/styles/HomeCardsContainer.css
+++ b/src/styles/HomeCardsContainer.css
@@ -27,17 +27,17 @@
   font-size: 1.5rem;
   padding-top: 20px;
   font-weight: 700;
-  color: #339a9c;
+  color: #305a88;
 }
 
 #body-section hr.new1 {
-  border-top: 2px solid #23a5a7;
+  border-top: 2px solid #305a88;
 }
 
 #body-section .content_head2 {
   font-family: "Exo 2", sans-serif;
   font-size: 1.4rem;
-  color: #339a9c;
+  color: #305a88;
 }
 
 #body-section .content_p {
